logos and description

--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,19 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+    name="og:description"
+    content="1945年10月，國民政府「參觀」外蒙公民投票之代表[3]雷法章的報告書指出，外蒙當局當時已受到蘇聯在軍事、政治、經濟上所控制"
+  />
+    <!-- <meta data-rh="true" name="description" content="在iOS设备中"/>
+    <meta data-rh="true" property="og:description" content="在iOS设备中" /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>不承认俄罗斯的任何假投票！！！-- 外蒙古网</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
